Work on FrequencyTool.